# php-cmake

./: .gitignore  build_src.sh
cmake/: CMakeLists.txt
cmake/CMake/: FindRE2C.cmake
cmake/TSRM/: CMakeLists.txt
cmake/Zend/: CMakeLists.txt
cmake/ext/fileinfo/: CMakeLists.txt
cmake/ext/json/: CMakeLists.txt
cmake/ext/pcre/: CMakeLists.txt
cmake/ext/standard/: CMakeLists.txt
cmake/main/: CMakeLists.txt
cmake/sapi/cli/: CMakeLists.txt
